--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WebBOE</title>
   </head>
   <body>
-    <h1>¡Hola mundo desde WebBOE!</h1>
-    <p>Si ves esto en tu navegador, Live Server está funcionando 👌</p>
+    <h1>Proyecto web BOE</h1>
   </body>
 </html>
+
