--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebBOE</title>
-  </head>
-  <body>
-    <h1>Proyecto web BOE</h1>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inforboe — Mini</title>
+  <meta name="description" content="Inforboe: datos públicos convertidos en oportunidades.">
+  <!-- Tailwind CDN (solo para pruebas) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Opcional: define un color de marca para abreviar clases
+    tailwind.config = {
+      theme: { extend: { colors: { brand: '#5A737B', brand2: '#7E9A9F', bgsoft: '#F7F9FA' } } }
+    }
+  </script>
+  <style>
+    html { scroll-behavior: smooth; } /* scroll suave para anclas */
+  </style>
+</head>
+<body class="font-sans text-gray-800 bg-white">
+  <!-- Header -->
+  <header class="fixed top-0 inset-x-0 bg-white shadow z-50">
+    <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
+      <h1 class="text-2xl font-bold text-brand">Inforboe</h1>
+      <nav class="hidden md:flex gap-6 text-sm font-medium">
+        <a href="#inicio" class="hover:text-brand">Inicio</a>
+        <a href="#divisiones" class="hover:text-brand">Divisiones</a>
+        <a href="#contacto" class="hover:text-brand">Contacto</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section id="inicio" class="pt-28 pb-16 bg-gray-50 text-center px-4">
+    <h2 class="text-3xl md:text-5xl font-bold text-brand mb-4">
+      La inteligencia que transforma los datos públicos en oportunidades reales.
+    </h2>
+    <p class="max-w-3xl mx-auto text-gray-700 mb-8">
+      Inforboe convierte la información de boletines oficiales y plataformas de contratación en conocimiento accionable.
+      Desde 1988 ayudamos a empresas y administraciones a gestionar licitaciones, adjudicaciones y contratos.
+    </p>
+    <div class="flex flex-wrap justify-center gap-3">
+      <a href="#contacto" class="inline-block bg-brand text-white px-4 py-2 rounded hover:bg-brand/90">Solicita una demo</a>
+      <a href="#contacto" class="inline-block border border-brand text-brand px-4 py-2 rounded hover:bg-brand hover:text-white">Habla con un experto</a>
+    </div>
+  </section>
+
+  <!-- Divisiones (3 cards) -->
+  <section id="divisiones" class="max-w-7xl mx-auto py-16 px-4">
+    <h3 class="text-3xl font-bold text-center text-brand mb-10">Divisiones de Inforboe</h3>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="bg-white shadow rounded p-6">
+        <h4 class="font-semibold text-lg mb-2">Inforboe Licitanet</h4>
+        <p class="text-sm mb-4">Alertas automáticas, control de pliegos y análisis de adjudicaciones.</p>
+        <ul class="text-sm list-disc ml-5 space-y-1">
+          <li>Alertas diarias de licitaciones</li>
+          <li>Descarga de documentación</li>
+          <li>Seguimiento y resultados</li>
+        </ul>
+      </div>
+      <div class="bg-white shadow rounded p-6">
+        <h4 class="font-semibold text-lg mb-2">Sanidata</h4>
+        <p class="text-sm mb-4">Especialistas en salud: informes de mercado y seguimiento de expedientes.</p>
+        <ul class="text-sm list-disc ml-5 space-y-1">
+          <li>Informes personalizados</li>
+          <li>Clasificación de productos</li>
+          <li>Seguimiento de expedientes</li>
+        </ul>
+      </div>
+      <div class="bg-white shadow rounded p-6">
+        <h4 class="font-semibold text-lg mb-2">Sanidata Pricing</h4>
+        <p class="text-sm mb-4">Inteligencia de precios y BI sanitario desde 2013.</p>
+        <a href="#contacto" class="inline-block bg-brand text-white px-4 py-2 rounded hover:bg-brand/90">Conócelo</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contacto -->
+  <section id="contacto" class="bg-gray-100 py-16 text-center px-4">
+    <h3 class="text-3xl font-bold text-brand mb-6">Contacto</h3>
+    <p>📍 Corazón de María, 9 – Madrid</p>
+    <p>📞 +34 915 100 053</p>
+    <p>✉️ inforboe@inforboe.es</p>
+    <div class="flex justify-center gap-3 mt-6">
+      <a href="mailto:inforboe@inforboe.es" class="bg-brand text-white px-4 py-2 rounded hover:bg-brand/90">Contactar con ventas</a>
+      <a href="mailto:inforboe@inforboe.es?subject=Solicitar%20demo" class="border border-brand text-brand px-4 py-2 rounded hover:bg-brand hover:text-white">Solicitar demo</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-bgsoft text-center py-8 text-sm text-gray-600">
+    <p>Área de clientes · Política de privacidad · Aviso legal · Cookies</p>
+    <p class="mt-2">© 2025 Inforboe S.A. — Todos los derechos reservados</p>
+  </footer>
+</body>
 </html>
 
